# confirmed-ctl

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  confirmed-ctl-api.service  confirmed-ctl.service  confirmed-ctl.yml.example  pyproject.toml  requirements.txt
confirmed_ctl/: __init__.py  cli.py  daemon.py  settings.py  vendors.py  wsgi.py
confirmed_ctl/api/: __init__.py  routes.py
confirmed_ctl/crm/: __init__.py  client.py
confirmed_ctl/db/: __init__.py  models.py  session.py
confirmed_ctl/db/migrations/: env.py
confirmed_ctl/db/migrations/versions/: 0001_initial.py  0002_add_synclog_source.py  0003_ignore_memo_patterns.py  0004_bank_txn_bofa_thread.py  0005_vendor_rep_registry.py
confirmed_ctl/gmail/: __init__.py  client.py  receipts.py
confirmed_ctl/ingest/: __init__.py  dedup.py  email_scan.py  ignore.py  rep_scan.py
confirmed_ctl/matching/: __init__.py  rag.py  scorer.py
confirmed_ctl/qbo/: __init__.py  client.py  sync.py
docs/: ARCHITECTURE-SPEC.md  CRM-SCHEMA.md  DESIGN.md  DROPBOX.md  INCIDENT-2026-07-map-trx-freeze.md  OPEN-QUESTIONS.md  RECEIPT-CTL.md  RECONCILE-CTL-DESIGN.md  REVIEW-AND-FIXES.md  ROADMAP.md  WORKFLOW.md
docs/archive/: QBO-PRODUCTION-ONBOARDING.md
rag/: CONFIRMED-CTL-RAG.md  confirmed-ctl-rag.md
src/confirmed_ctl/: __init__.py  config.py  crm_client.py  dropbox_store.py  gmail_receipt.py  main.py  models.py  pipeline.py  plaid_verifier.py
tests/: conftest.py  test_config.py  test_crm_client.py  test_crm_writeback.py  test_dedup.py  test_dropbox_store.py  test_email_scan.py  test_gmail_client.py  test_ignore.py  test_imports.py  test_pipeline.py  test_plaid_verifier.py  test_qbo_client.py  test_receipts.py  test_rep_scan.py  test_routes.py  test_scorer.py  test_settings.py  test_vendors.py  test_wsgi.py
tests/fixtures/: ach_withdrawal_over_limit.html  card_transaction_over_limit.html
