[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confirmed-ctl"
version = "0.1.0"
description = "Automated newspaper ad receipt collection and final payment reconciliation for PERM-Ads.com LLC."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "PERM-Ads.com LLC" }]
dependencies = [
    "click>=8.1",
    "PyYAML>=6.0",
    "mysql-connector-python>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
confirmed-ctl = "confirmed_ctl.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
